<resources>
    <string name="app_name">AppBanDoChoi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_sidemenu">SidemenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_navigation_menu">NavigationMenuActivity</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    // huynh
    <string name="otp_verification">OTP Verification</string>
    <string name="we_will_send_you_an_otp_on_this_mobile_number">We will send you an OTP on this mobile number</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="_84">+84-</string>
    <string name="get_otp">GET OTP</string>
    <string name="enter_the_otp_sent_to">Enter the OTP sent to</string>
    <string name="didn_t_receive_the_otp">Didn\'t receive the OTP?</string>
    <string name="resend_otp">RESEND OTP</string>
    <string name="verify">VERIFY</string>
    <string name="reset_password">Reset Password</string>
    <string name="Doi_mat_khau">Đổi mật khẩu</string>
    <string name="x_c_nh_n_otp">XÁC NHẬN OTP</string>
    <string name="ch_ng_t_i_s_g_i_m_t_m_otp_n_s_i_n_tho_i_c_a_b_n">Chúng tôi sẽ gửi một mã OTP đến số điện thoại của bạn!</string>
    <string name="i_n_s_i_n_tho_i_ng_k_t_i_kho_n">Điền số điện thoại đăng ký tài khoản</string>
    <string name="ti_p_t_c">TIẾP TỤC</string>
    <string name="nh_p_m_otp_c_g_i_n_i_n_tho_i_c_a_b_n">Nhập mã OTP đã được gửi đến điện thoại của bạn !</string>
    <string name="kh_ng_nh_n_c_m">Không nhận được mã</string>
    <string name="g_i_l_i">GỬI LẠI</string>
    <string name="x_c_nh_n">Xác nhận</string>
    <string name="nh_p_m_t_kh_u_m_i">Nhập mật khẩu mới</string>
    <string name="c_p_nh_t">cập nhật</string>
    <string name="nh_p_m_t_kh_u_c">Nhập mật khẩu cũ</string>
    <string name="i_m_t_kh_u">ĐỔI MẬT KHẨU</string>
    <string name="c_p_nh_t_m_t_kh_u_m_i">Cập nhật mật khẩu mới</string>
</resources>